<resources>
    <string name="app_name">Погодная программа</string>
    <string name="label_city">Выберите город</string>
    <string name="city_label">Город</string>
    <string name="label_wind">Скорость ветра</string>
    <string name="label_pressure">Давление</string>
    <string name="label_wet">Влажность</string>
    <string name="val_wind"> м/с</string>
    <string name="val_pressure"> мм.рт.ст.</string>
    <string name="val_wet"> %</string>
    <string name="menu_choose_city">Выбрать город</string>
    <string name="menu_off_wind">Отображать скорость ветра</string>
    <string name="menu_off_pressure">Отображать давление</string>
    <string name="menu_off_wet">Отображать влажность</string>
    <string name="label_character">Дополнительная информация</string>
    <string name="menu_about">О разработчиках</string>
    <string name="menu_send">Обратная связь</string>
    <string name="creator1">Менеджер проекта</string>
    <string name="creator1_fio">Иванов И.И.</string>
    <string name="creator1_tel">Телефон для связи: 98-98-31</string>
    <string name="creator1_email">e_mail: big_boss@mail.ru</string>
    <string name="about_company">ОАО \"Веселый роджер\"</string>
    <string name="no_sensor">Датчик отсутствует</string>
    <string name="cbGeoloc">Определить гороад по геолокации</string>
    <string name="button_accept">Применить</string>
    <string name="Warning_geoloc">Вы не можете определить город по геолокации не предоставив необходимые разрешения</string>
    <string name="city_label1">Получение данных по координатам</string>
    <string name="city_label2">Город</string>
    <string name="Warning_city">Город с данным названием отсутствует.</string>
</resources>
