<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/MainTheme"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/label_character"
        tools:ignore="MissingConstraints"
        android:id="@+id/label_character"
        style="@style/MainTitle"
        ></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_wind"
        app:layout_constraintTop_toBottomOf="@+id/label_character"
        tools:ignore="MissingConstraints"
        android:id="@+id/label_wind"
        style="@style/MainText"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_pressure"
        app:layout_constraintTop_toBottomOf="@+id/label_wind"
        tools:ignore="MissingConstraints"
        android:id="@+id/label_pressure"
        style="@style/MainText"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_wet"
        app:layout_constraintTop_toBottomOf="@+id/label_pressure"
        tools:ignore="MissingConstraints"
        android:id="@+id/label_wet"
        style="@style/MainText"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_wind"
        app:layout_constraintTop_toBottomOf="@+id/label_character"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        android:id="@+id/val_wind"
        style="@style/MainText"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_pressure"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val_wind"
        tools:ignore="MissingConstraints"
        android:id="@+id/val_pressure"
        style="@style/MainText"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_wet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val_pressure"
        tools:ignore="MissingConstraints"
        android:id="@+id/val_wet"
        style="@style/MainText"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>