<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    style="@style/MainTheme"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_city"
        android:id="@+id/label_city"
        tools:ignore="MissingConstraints"
        style="@style/MainTitle"></TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:id="@+id/cityText"
        app:layout_constraintTop_toBottomOf="@+id/label_city">
    </EditText>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:text="@string/cbGeoloc"
        android:id="@+id/checkbox_geoloc"
        app:layout_constraintTop_toBottomOf="@+id/cityText">
    </CheckBox>

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_geoloc"
        tools:ignore="InvalidId,MissingConstraints"></Button>

    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="История просмотров"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAccept"
        tools:ignore="MissingConstraints"></TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/city_list"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"></androidx.recyclerview.widget.RecyclerView>




</androidx.constraintlayout.widget.ConstraintLayout>